 * More precise calculations for finding the widest spinbox text.
 * Don't consider the tab overlap in drawing the tabbar frame (as with the tab widget frame).
 * Allowed toolbar_separator_thickness to be set to a value less than toolbar indicator size, without changing its default value (the maximum of toolbar indicator size and 4). The minimum value is 2.

V0.19.0
---------
 * Allow dragging from some disabled widgets.
 * Added an option (to Kvantum Manager) for setting the toolbar icon size to the font height if possible.
 * Don't style vertical toolbars because, otherwise, they might look ugly.
 * Always check if the drag manager is deleted after it sends mouse events (to prevent any crash).
 * Increased the drag distance and delay when dragging is done from buttons.
 * Try to do less calculations to get widget sizes by not consulting QCommonStyle as far as possible.
 * Draw view-items independently of QCommonStyle to apply all size settings correctly.
 * Always reserve the vertical space for a single-line text in view-items. QCommonStyle is inconsistent in this regard and may create a tiny item editor when the text is empty. Qt doesn't give enough info to QStyle for knowing whether the editor is active.
 * Ignore a view-item's custom brush when it's selected (as QCommonStyle does).
 * Cleaned up the code of transient scrollbar animation (and fixed a rare case, where a transient scrollbar might not disappear after app startup — as in kcharselect).
 * Fixed a small problem in (Krita's) KisSliderSpinBox.

V0.18.0
---------
 * Use PE_FrameStatusBarItem with Qt ≥ 5.13.0 and return from it.
 * Made toolbars unmovable by default.
 * Added some effects to the labels of Kvantum Manager's About dialog.
 * Don't let the width of a push button that has text be smaller than 80px (although the minimum width may be greater because it depends on the font).
 * Replace text tabs with spaces when calculating label sizes (because text tabs aren't expanded when labels are drawn).